# AI-SWE-assignment

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  EVAL.md  README.md  pyproject.toml
data/: brand.md  catalog.json
data/users/: _seed_giulia.json
eval/: calibrate.py  cases.yaml  deterministic.py  human_baseline.json  judge.py  run.py
lume/: __init__.py  cli.py  config.py  schemas.py
lume/agents/: __init__.py  clarify.py  constraints.py  graph.py  guard.py  intent.py  responder.py  router.py  selection.py
lume/catalog/: __init__.py  loader.py  models.py  normalize.py
lume/memory/: __init__.py  profile.py  store.py
lume/retrieval/: __init__.py  bm25.py  hybrid.py  query.py  rerank.py  vectors.py
scripts/: inspect_catalog.py  test_retrieval.py
tests/: test_memory.py  test_normalize.py
