[project]
name = "lume"
version = "0.1.0"
description = "Multi-agent product recommender for Lumé, an Italian beauty reseller (TextYess take-home)."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Alessandro Mett" }]

dependencies = [
    "openai>=1.40.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12.3",
    "pyyaml>=6.0.1",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
lume = "lume.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lume"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
